Bug 45815 - [lt-pulseaudio] iface-core.c: Assertion 'dbus_message_iter_next(&msg_iter)' failed at ../../src/modules/dbus/iface-core.c:1472, function handle_load_module(). Aborting.
Summary: [lt-pulseaudio] iface-core.c: Assertion 'dbus_message_iter_next(&msg_iter)' f...
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Tanu Kaskinen
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 45812
  Show dependency treegraph
 
Reported: 2012-02-09 00:14 UTC by Tanu Kaskinen
Modified: 2012-03-24 22:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Test case (810 bytes, text/plain)
2012-03-24 22:47 UTC, Tanu Kaskinen
Details

Description Tanu Kaskinen 2012-02-09 00:14:41 UTC
Reported in IRC some time ago:

23:30 -!- panto [~panto@wsip-184-177-188-2.sd.sd.cox.net] has joined #pulseaudio
23:30 < panto> hello
23:31 < panto> guys, pa is pretty sucky handling dbus protocol errors
23:31 -!- bozi [~bozi@p4FD6F998.dip.t-dialin.net] has joined #pulseaudio
23:31 < panto> "E: [lt-pulseaudio] iface-core.c: Assertion 'dbus_message_iter_next(&msg_iter)' failed at ../../src/modules/dbus/iface-core.c:1472, function handle_load_module(). Aborting.
23:31 < panto> "
Comment 1 Tanu Kaskinen 2012-02-09 00:34:38 UTC
I want to investigate this before 2.0, so adding to the blocker list.
Comment 2 Tanu Kaskinen 2012-03-24 21:36:11 UTC
Starting to investigate.
Comment 3 Tanu Kaskinen 2012-03-24 22:47:38 UTC
Created attachment 58993 [details]
Test case

I'm attaching a test case that can trigger the crash (actually not the same assertion but the root cause is the same). The problem is that in most cases we don't check incoming method call signatures, and there's code that assumes that such checking has been done.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.