dbus: Check method call signatures.

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=45815